--- a/src/styles/config/_mixins.scss
+++ b/src/styles/config/_mixins.scss
@@ -17,7 +17,7 @@
     border: none;
 }
 
-@mixin flex-center($isInline){
+@mixin flex-center($isInline: false){
     @if $isInline{
         display: inline-flex;
     } @else{
