--- a/src/styles/config/_variables.scss
+++ b/src/styles/config/_variables.scss
@@ -1,10 +1,10 @@
 :root{
 
     --color-light: #ffffff;
-    --color-gray-light: #F0F0F0;
+    --color-gray-light: #DCDCDC;
     --color-gray-light-alt: #F0F0F0;
-    --color-dark-brown: #251A00;
-    --color-light-brown: #644F43;
+    --color-brown-dark: #251A00;
+    --color-brown-light: #644F43;
     --color-brown-alt: #C1B9B4;
     --color-accent-orange: #EF7723;
     --color-warning-red: #FF4040;
