--- a/src/styles/config/_global.scss
+++ b/src/styles/config/_global.scss
@@ -1,11 +1,18 @@
 body{
-    @include fluid-text(22, 16);
-    
     font-family: 'Gogh';
-    line-height: 1.28;
+    line-height: 1,28;
     color: var(--color-brown-dark);
     background-color: var(--color-light);
     font-weight: 500;
+    @include desktop{
+        @include fluid-text(22,18);
+    };
+    @include laptop{
+        @include fluid-text(18,16);
+    };
+    @include mobile{
+        font-size:16px;
+    };
 }
 
 a{
@@ -13,17 +20,47 @@ a{
 }
 
 h2,h3,h4,p{
-    font-family: 'Gogh';
     font-weight: 700;
+    margin: 0;
 }
 
 h2{
-    @include fluid-text(48,26);
+    @include desktop{
+        @include fluid-text(48,40);
+    };
+    @include laptop{
+        @include fluid-text(40,30);
+    };
+    @include tablet{
+        @include fluid-text(30,26);
+    };
+    @include mobile{
+        font-size:26px;
+    };
 }
 h3{
-    @include fluid-text(40, 24);
+    @include desktop{
+        @include fluid-text(40,36);
+    };
+    @include laptop{
+        @include fluid-text(36,24);
+    };
+    @include tablet{
+        font-size:24px;
+    };
 }
 
 h4{
-    @include fluid-text(28,18);
+    @include desktop{
+        @include fluid-text(28,24);
+    };
+    @include laptop{
+        @include fluid-text(24,22);
+    };
+    @include tablet{
+        @include fluid-text(22,18);
+    };
+    @include mobile-small{
+        font-size:18px;
+    };
 }
