--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,3 +5,5 @@
 @import './config/variables';
 @import './config/utils';
 @import './config/global';
+
+@import './blocks/burger-button','./blocks/header.scss';
