--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -8,6 +8,7 @@
     @include tablet{
         padding: 16px;
         padding-bottom: 0;
+        height: 696px;
     }
     @include mobile-small{
         padding: 12px;
