Стили для блока магазинов

--- a/src/styles/config/_variables.scss
+++ b/src/styles/config/_variables.scss
@@ -6,7 +6,7 @@
     --color-brown-dark: #251A00;
     --color-brown-light: #644F43;
     --color-brown-alt: #C1B9B4;
-    --color-accent-orange: #EF7723;
+    --color-orange-accent: #EF7723;
     --color-warning-red: #FF4040;
     --color-warning-red-bg: #FF404020;
     --color-gray-alt: #F8F7F7;
