--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,25 +1,25 @@
 .header{
     padding: 24px;
-    padding-bottom: 0;
-    height: 938px;
-    @include laptop{
-        height: 768px;
-    }
     @include tablet{
         padding: 16px;
-        padding-bottom: 0;
-        height: 696px;
     }
     @include mobile-small{
         padding: 12px;
-        padding-bottom: 0;
     }
 
     &__card{
         position: relative;
         max-height: 720px;
         padding-top: 10px;
+        padding-bottom: 32px;
         height: 100%;
+        height: 938px;
+        @include laptop{
+            height: 768px;
+        }
+        @include tablet{
+            height: 696px;
+        }
     }
     &__image{
         border-radius: var(--border-radius);
@@ -152,7 +152,10 @@
     &__info{
         position: relative;
         width: 100%;
-        top: 70px;
+        top: 95px;
+        @include mobile{
+            top: 0px;
+        }
         &-list{
             display: flex;
             justify-content: space-between;
