--- a/src/styles/blocks/_shops.scss
+++ b/src/styles/blocks/_shops.scss
@@ -1,38 +1,127 @@
-.shops{
-    padding-inline: 40px;
-    @include mobile-small{
-        padding-inline: 32px;
+.shops {
+    padding-top: 125px;
+    padding-bottom: 100px;
+    height: 1277px;
+    position: relative;
+    top: 70px;
+
+    @include laptop {
+        padding-top: 50px;
+        padding-bottom: 84px;
+        height: 1168px;
     }
-    &__grid{
+
+    @include tablet {
+        padding-top: 30px;
+        padding-bottom: 46px;
+        height: 998px;
+    }
+
+    @include mobile {
+        padding-top: 36px;
+    }
+
+    &__inner{
+        flex-direction: column;
+        gap: 64px;
+        @include laptop{
+            gap: 46px;
+        }
+        @include tablet{
+            gap: 36px;
+        }
+        justify-content: space-between;
+    }
+
+    &__grid {
         display: grid;
-        grid-template-columns: repeat(6,1fr);
+        grid-template-columns: repeat(6, 1fr);
         gap: 24px;
-        &-card{
+
+        &-card {
             height: 274px;
-            @include tablet{
+
+            @include tablet {
                 height: 240px;
             }
-            @include mobile-small{
+
+            @include mobile-small {
                 height: 186px;
             }
         }
-        &-item{
+
+        &-item {
+            --title-bg-color: var(--color-light);
+            --title-text-color: var(--color-brown-dark);
+            flex-direction: column;
+            justify-content: end;
+            align-items: start;
+            padding: 32px;
+            position: relative;
+
             @for $i from 1 through 6 {
                 &:nth-child(#{$i}) {
-                  background-image: url(/public/images/backgrounds/bg-#{$i}.png);
-                  background-size: cover;
+                    background-image: url(/public/images/backgrounds/bg-#{$i}.png);
+                    background-size: cover;
                 }
-              }
+            }
 
-              &:nth-child(1),&:nth-child(2){
+            &:nth-child(1),
+            &:nth-child(2) {
                 grid-column: span 3;
-              }
-              &:nth-child(3),&:nth-child(4),&:nth-child(5){
+            }
+
+            &:nth-child(3),
+            &:nth-child(4),
+            &:nth-child(5) {
                 grid-column: span 2;
-              }
-              &:nth-child(6){
+            }
+
+            &:nth-child(6) {
                 grid-column: span 6;
-              }
+            }
+            @include mobile{
+                &:nth-child(3){
+                    grid-column: span 6;
+                }
+                &:nth-child(4),
+                &:nth-child(5) {
+                grid-column: span 3;
+            }
+            }
+
+            @include mobile-small{
+                grid-column: span 6 !important;
+            }
+
+            &-title {
+                display: inline-block;
+                background-color: var(--title-bg-color);
+                color: var(--title-text-color);
+                padding: 10px 24px;
+                z-index: 1;
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                transition-duration: 0.2s;
+                z-index: 0;
+            }
+
+            @include hover {
+                --title-bg-color: var(--color-orange-accent);
+                --title-text-color: var(--color-light);
+
+                &::after {
+                    background: rgba(0, 0, 0, 0.5);
+                }
+            }
+
         }
     }
 }
