--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,4 +9,5 @@
 @import './blocks/burger-button',
         './blocks/list',
         './blocks/header',
-        './blocks/shops';
+        './blocks/shops',
+        './blocks/contact';
