--- a/src/styles/blocks/_shops.scss
+++ b/src/styles/blocks/_shops.scss
@@ -1,20 +1,16 @@
 .shops {
     padding-top: 125px;
-    padding-bottom: 100px;
-    height: 1277px;
+    padding-bottom: 30px;
     position: relative;
-    top: 70px;
+    background-color: var(--color-light);
 
     @include laptop {
         padding-top: 50px;
-        padding-bottom: 84px;
-        height: 1168px;
+        padding-bottom: 14px;
     }
 
     @include tablet {
         padding-top: 30px;
-        padding-bottom: 46px;
-        height: 998px;
     }
 
     @include mobile {
